# btc_key_matcher

./: .gitignore  Cargo.toml
resources/chunks/: chunk_0.json  chunk_00000.json  chunk_1045576874110733435556483592265902859339685420537855553800566999580.json  chunk_11523975645109265769.json  chunk_246706860280167220513535935950340196847248515084091668004782056809.json  chunk_6460466709360054980745807344866194264563357633878066801978749257248.json
resources/chunks/puzzle_071/: chunk_0.json  chunk_00001.json  chunk_1.json  chunk_1000000.json  chunk_10000000.json  chunk_100000000.json  chunk_1000000000.json  chunk_10000000000.json  chunk_1030453210.json  chunk_10304532108.json  chunk_110000000.json  chunk_1100000000.json  chunk_11000000000.json  chunk_11100000000.json  chunk_11100500000.json  chunk_11110000000.json  chunk_11210000000.json  chunk_11510000000.json  chunk_11610000000.json  chunk_11670000000.json  chunk_11680000000.json  chunk_11690000000.json  chunk_11700000000.json  chunk_11730000000.json  chunk_11740000000.json  chunk_11760000000.json  chunk_11780000000.json  chunk_11790000000.json  chunk_11793000000.json  chunk_11795000000.json  chunk_11795100000.json  chunk_11795400000.json  chunk_11795800000.json  chunk_11796200000.json  chunk_11797000000.json  chunk_11798000000.json  (+68 more)
resources/tests/: test_addresses_sorted.txt  test_chunk_found.json  test_chunk_not_found.json
src/: address.rs  chunk.rs  chunk_manager.rs  keygen.rs  lib.rs  main.rs  puzzles.rs  search.rs
tests/: test_chunk.rs  test_integration.rs  test_keygen.rs  test_search.rs
(+2 files in other folders)
