[package]
name = "btc_key_matcher"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
hex = "0.4"
base58 = "0.2"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.9"
rand = "0.8"
secp256k1 = { version = "0.28", features = ["rand"] }

[dev-dependencies]
tempfile = "3"

[lib]
name = "btc_key_matcher"
path = "src/lib.rs"

[profile.test]
incremental = false